# self-improve

./: .gitignore  ai-engineering-learning-plan.md  aihot_feed.txt  breakthrough-plan.md  improve.md  ocr_run.py  robot-data-engineering-roadmap.md  具身智能产业链投资研究报告.md  🗂️ Claude Code Skills 命令目录.md
.obsidian/: workspace.json
config/: mcporter.json
labs/phase0-basics/lab01-docker-postgres/: docker-compose.yml  init.sql  query_orders.py
labs/phase0-basics/lab02-python-engineering/: orders.csv  pyproject.toml  report.json  v1_quick_script.py
labs/phase0-basics/lab02-python-engineering/src/order_processor/: __init__.py  cli.py  models.py  processor.py  reader.py  reporter.py
labs/phase0-basics/lab02-python-engineering/tests/: test_processor.py
picture/: ocr_result.txt  图片识别结果.md  提示工程知识体系.md
robot-data-pipeline/: README.md  pyproject.toml  run.py
robot-data-pipeline/data/: dataset_summary.json  robot_frames.parquet
robot-data-pipeline/src/robot_pipeline/: __init__.py  cli.py  loader.py  models.py  quality.py  reporter.py  simulator.py  storage.py
robot-data-pipeline/tests/: test_pipeline.py
